; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_wi_stuff.c_WI_initStats.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_wi_stuff.c_WI_initStats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@StatCount = common dso_local global i32 0, align 4
@state = common dso_local global i32 0, align 4
@acceleratestage = common dso_local global i64 0, align 8
@sp_state = common dso_local global i32 0, align 4
@cnt_secret = common dso_local global i32* null, align 8
@cnt_items = common dso_local global i32* null, align 8
@cnt_kills = common dso_local global i32* null, align 8
@cnt_par = common dso_local global i32 0, align 4
@cnt_time = common dso_local global i32 0, align 4
@TICRATE = common dso_local global i32 0, align 4
@cnt_pause = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @WI_initStats() #0 {
  %1 = load i32, i32* @StatCount, align 4
  store i32 %1, i32* @state, align 4
  store i64 0, i64* @acceleratestage, align 8
  store i32 1, i32* @sp_state, align 4
  %2 = load i32*, i32** @cnt_secret, align 8
  %3 = getelementptr inbounds i32, i32* %2, i64 0
  store i32 -1, i32* %3, align 4
  %4 = load i32*, i32** @cnt_items, align 8
  %5 = getelementptr inbounds i32, i32* %4, i64 0
  store i32 -1, i32* %5, align 4
  %6 = load i32*, i32** @cnt_kills, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 0
  store i32 -1, i32* %7, align 4
  store i32 -1, i32* @cnt_par, align 4
  store i32 -1, i32* @cnt_time, align 4
  %8 = load i32, i32* @TICRATE, align 4
  store i32 %8, i32* @cnt_pause, align 4
  %9 = call i32 (...) @WI_initAnimatedBack()
  ret void
}

declare dso_local i32 @WI_initAnimatedBack(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
